--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,14 @@
+# APP
 PORT=3000
 
+# Redis
 REDIS_URL=redis://localhost:6379
 
+# DataBase
 MONGO_URL=mongodb://localhost:27017/mafia
 CACHE_TTL=5000
 
+# JWT
 JWT_SECRET=123
 JWT_TOKEN_AUDIENCE=localhost:3000
 JWT_TOKEN_ISSUER=localhost:3000
