--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ REDIS_URL=redis://localhost:6379
 
 # DataBase
 MONGO_URL=mongodb://localhost:27017/mafia
+MONGO_DEBUG=false
 CACHE_TTL=5000
 
 # JWT
