--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "graphql": "^16.8.0",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-tools": "^9.0.0",
     "mongoose": "^7.4.3",
     "reflect-metadata": "^0.1.13",
