--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "compression": "^1.7.4",
     "graphql": "^16.8.0",
     "graphql-subscriptions": "^2.0.0",
     "graphql-tools": "^9.0.0",
@@ -50,6 +51,7 @@
     "@swc/core": "^1.3.78",
     "@types/bcrypt": "^5.0.0",
     "@types/cache-manager": "^4.0.2",
+    "@types/compression": "^1.7.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
