--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "graphql-subscriptions": "^2.0.0",
     "graphql-tools": "^9.0.0",
     "mongoose": "^7.4.3",
+    "nest-winston": "^1.9.4",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
