--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "NODE_ENV=prod nest start",
-    "dev": "NODE_ENV=dev nest start --watch",
-    "debug": "nest start --debug --watch",
+    "start:dev": "NODE_ENV=dev nest start --watch",
+    "start:debug": "nest start --debug --watch",
     "prod": "NODE_ENV=prod node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
