--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,17 +1,17 @@
 {
     "version": "0.2.0",
     "configurations": [
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Program",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "program": "${file}",
-            "outFiles": [
-                "${workspaceFolder}/**/*.js"
-            ]
-        }
+      {
+        "type": "node",
+        "request": "attach",
+        "name": "Debug: nestjs-graphq",
+        "remoteRoot": "/app",
+        "localRoot": "${workspaceFolder}",
+        "protocol": "inspector",
+        "port": 9229,
+        "restart": true,
+        "address": "0.0.0.0",
+        "skipFiles": ["<node_internals>/**"]
+      }
     ]
-}
+  }
