--- a/env.example
+++ b/env.example
@@ -6,7 +6,7 @@ PORT=3000
 REDIS_URL=redis://localhost:6379
 
 # DataBase
-MONGO_URL=mongodb://localhost:27017/mafia
+MONGO_URL=mongodb://localhost:27017/iEA
 MONGO_DEBUG=false
 CACHE_TTL=5000
 
