--- a/package.json
+++ b/package.json
@@ -40,9 +40,10 @@
     "graphql": "^16.8.0",
     "graphql-subscriptions": "^2.0.0",
     "graphql-tools": "^9.0.0",
-    "mongoose": "^7.4.3",
+    "mongoose": "^8.2.0",
+    "mongoose-autopopulate": "^1.1.0",
     "nest-winston": "^1.9.4",
-    "reflect-metadata": "^0.1.13",
+    "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
     "winston": "^3.10.0"
   },
@@ -50,17 +51,18 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@swc/cli": "^0.1.62",
+    "@swc/cli": "^0.3.9",
     "@swc/core": "^1.3.78",
     "@types/bcrypt": "^5.0.0",
     "@types/cache-manager": "^4.0.2",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/mongoose-autopopulate": "^0.10.6",
     "@types/node": "^20.3.1",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
