--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/serve-static": "^4.0.1",
     "@nestjs/throttler": "^5.0.0",
     "apollo-server-express": "^3.12.0",
     "bcrypt": "^5.1.1",
