--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/graphql": "^12.0.8",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/mongoose": "^10.0.1",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/serve-static": "^4.0.1",
     "@nestjs/throttler": "^5.0.0",
@@ -44,6 +45,8 @@
     "mongoose": "^8.2.0",
     "mongoose-autopopulate": "^1.1.0",
     "nest-winston": "^1.9.4",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
     "winston": "^3.10.0"
@@ -61,6 +64,7 @@
     "@types/jest": "^29.5.2",
     "@types/mongoose-autopopulate": "^0.10.6",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
