--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/serve-static": "^4.0.1",
     "@nestjs/throttler": "^5.0.0",
+    "altair-express-middleware": "^7.0.1",
     "apollo-server-express": "^3.12.0",
     "bcrypt": "^5.1.1",
     "cache-manager": "^5.2.3",
