--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "graphql": "^16.8.0",
     "graphql-subscriptions": "^2.0.0",
     "graphql-tools": "^9.0.0",
+    "graphql-type-json": "^0.3.2",
     "helmet": "^7.1.0",
     "mongoose": "^8.2.0",
     "mongoose-autopopulate": "^1.1.0",
@@ -63,6 +64,7 @@
     "@types/cache-manager": "^4.0.2",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.17",
+    "@types/graphql-type-json": "^0.3.5",
     "@types/jest": "^29.5.2",
     "@types/mongoose-autopopulate": "^0.10.6",
     "@types/node": "^20.3.1",
