--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/serve-static": "^4.0.1",
+    "@nestjs/swagger": "^7.4.0",
     "@nestjs/throttler": "^5.0.0",
     "altair-express-middleware": "^7.0.1",
     "apollo-server-express": "^3.12.0",
@@ -52,6 +53,7 @@
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.1",
     "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.10.0"
   },
   "devDependencies": {
